[package]
name = "fbx-viewer"
version = "0.1.0"
authors = ["YOSHIOKA Takuma <lo48576@hard-wi.red>"]
edition = "2018"

license = "MIT OR Apache-2.0"
readme = "README.md"
description = "FBX viewer"
repository = "https://github.com/lo48576/fbx-viewer"
keywords = ["FBX", "3D"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
cgmath = "0.17"
env_logger = "0.6"
failure = "0.1.5"
fbxcel-dom = { git = "https://github.com/lo48576/fbxcel-dom.git", rev = "36726b661ff6" }
image = "0.21"
log = "0.4"
structopt = "0.2"
vulkano = "0.11"
vulkano-shaders = "0.11"
vulkano-win = "0.11"
winit = "0.18"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "lo48576/fbx-viewer" }
