[package]
name = "fbx-viewer"
version = "0.1.0"
authors = ["YOSHIOKA Takuma <lo48576@hard-wi.red>"]
edition = "2018"

license = "MIT OR Apache-2.0"
readme = "README.md"
description = "FBX viewer"
repository = "https://github.com/lo48576/fbx-viewer"
keywords = ["FBX", "3D"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow = "1"
cgmath = { version = "0.18.0", features = ["mint"] }
env_logger = "0.8.2"
fbxcel-dom = "0.0.6"
image = "0.23.12"
log = "0.4"
rgb = "0.8"
structopt = "0.3"
vulkano = "0.17"
vulkano-shaders = "0.17"
vulkano-win = "0.17"
winit = "0.21.0"

vk-sys = "=0.5.2"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "lo48576/fbx-viewer" }
