[package]
name = "fbx-viewer"
version = "0.1.0"
authors = ["YOSHIOKA Takuma <lo48576@hard-wi.red>"]
edition = "2018"

license = "MIT OR Apache-2.0"
readme = "README.md"
description = "FBX viewer"
repository = "https://github.com/lo48576/fbx-viewer"
keywords = ["FBX", "3D"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow = "1"
cgmath = { version = "0.18.0", features = ["mint"] }
env_logger = "0.10.0"
fbxcel-dom = "0.0.10"
image = "0.24.2"
log = "0.4"
rgb = "0.8"
structopt = "0.3"
vulkano = "0.20.0"
vulkano-shaders = "0.20.0"
vulkano-win = "0.20.0"
winit = "0.24.0"

[badges]
maintenance = { status = "deprecated" }
travis-ci = { repository = "lo48576/fbx-viewer" }
